2024-05-23T01:05:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9200580459 # 297
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-23
* notice: last 14d: unq all: 25 253
* notice: prev accum: outdated-unq outdated-all / unq all: 658 3622 / 684 3858
* notice: next accum: outdated-unq outdated-all / unq all: 658 3622 / 686 3879
* notice: prev exec diff / last date diff / accum: unq all: +2 +21 -1 -4 / +3 +27 -0 -0 / 3 27
* notice: removed / changed dates: [] / [2024-05-09 2024-05-22]

2024-05-22T16:20:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9194907895 # 296
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-22
* notice: last 14d: unq all: 23 236
* notice: prev accum: outdated-unq outdated-all / unq all: 657 3598 / 683 3852
* notice: next accum: outdated-unq outdated-all / unq all: 658 3622 / 684 3858
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [2024-05-08] / [2024-05-22]

2024-05-22T01:05:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9183709086 # 294
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-22
* notice: last 14d: unq all: 23 254
* notice: prev accum: outdated-unq outdated-all / unq all: 657 3598 / 682 3850
* notice: next accum: outdated-unq outdated-all / unq all: 657 3598 / 683 3852
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +6 -0 -0 / 2 6
* notice: removed / changed dates: [] / [2024-05-21]

2024-05-21T08:18:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9171298942 # 292