@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-23T01:05:08Z",
-  "count_outdated" : 3622,
-  "uniques_outdated" : 658,
+  "timestamp" : "2024-05-24T01:05:43Z",
+  "count_outdated" : 3633,
+  "uniques_outdated" : 662,
   "count" : 3879,
   "uniques" : 686,
   "views" : [
-    {
-      "timestamp": "2024-05-09T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 11 ],
-      "count_decinc": [ 4, 11 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 1, 4 ]
-    },
     {
       "timestamp": "2024-05-10T00:00:00Z",
       "count": 4,
