@@ -1,12 +1,7 @@
 {
-  "count": 253,
-  "uniques": 25,
+  "count": 246,
+  "uniques": 22,
   "views": [
-    {
-      "timestamp": "2024-05-09T00:00:00Z",
-      "count": 7,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-05-10T00:00:00Z",
       "count": 4,
